src/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    box-sizing: border-box;
}

:root {
    --mainLightThemeLightBlue: #33C5FF; 
    --mainLightThemeDarkBlue: #00B7FF;
    --mainLightThemeTextColor: #00121a;
    color: white;
}

body {
    padding: 0;
    margin: 0;
    font-family: 'Poppins';
    display: flex;
    flex-direction: column;
    height: 100vh;
}

h2, h3, ul {
    padding: 0;
    margin: 0;
    list-style-type: none;
}

header {
    background-color: var(--mainLightThemeLightBlue);
    display: flex;
    border-bottom: 13px solid var(--mainLightThemeDarkBlue);
    justify-content: space-between;
    align-items: center;
    padding: 0 15px;
}

#btnTheme {
    position: relative;
    border-radius: 50px;
    padding: 6px 12px;
    display: flex;
    align-items: center;
    gap: 22px;
    cursor: pointer;
    transition: 0.5s;
    outline: none;
}

.sun#btnTheme {
    background-color: darkblue;
    border: 2px solid white;
} 

.moon#btnTheme {
    background-color: white;
    border: 2px solid darkblue;
} 

#btnTheme::before {
    position: absolute;
    left: 9px;
    transition: 0.6s;
    content: "";
    height: 29px;
    width: 29px;
    background-color: white;
    border-radius: 10000px;
}

.sun#btnTheme::before {
    transition: 0.5s;
    background-color: white;
}

.moon#btnTheme::before {
    transform: translate(47px, 0);
    transition: 0.5s;
    background-color: darkblue;
}

#btnSideBar {
    background: none;
    border: none;
    cursor: pointer;
    padding: 0;
    padding: 6px 7px;
    transition: background-color 0.2s ease-in-out;
    border-radius: 10px;
}

#btnSideBar:hover  {
    background-color: var(--mainLightThemeDarkBlue);
}

#content {
    flex: 1;
    display: flex;
}

#sidebar {
    position: relative;
    top: 0;
    left: 0;
    width: 310px;
    margin-left: -310px;
    background-color: #ffffff;
    color: var(--mainLightThemeTextColor);
    transition: 0.3s;
    margin: auto 0;
    margin-left: 14px;
    border: 3px solid var(--mainLightThemeDarkBlue);
    border-radius: 20px;
    min-height: 95%;
}

.section-title {
    margin-left: 24px;
    margin-bottom: 8px;
    padding-left: 5px;
    margin-top: 15px;
    border-bottom: 2px solid var(--mainLightThemeTextColor);
}

.sidebar-list {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.sidebar-item {
    display: flex;
    align-items: center;
    padding: 2px;
    margin-left: 34px;
    padding-left: 10px;
    padding-right: 5px;
    margin-right: 5px;
    gap: 5px;
    border-radius: 7px;
    box-shadow: 0px 0px 11px 4px rgb(0 0 0 / 8%);
    cursor: pointer;
    background-color: white;
}

.sidebar-item > * {
    cursor: pointer;
}

.sidebar-item:hover {
    background-color: var(--mainLightThemeDarkBlue);
    color: white;
}

.btnFilter img {
    height: 28px;
}

.project-item {
    justify-content: space-between;
    margin-right: 5px;
    padding-right: 10px;
}

.project-item:hover {
    background-color: var(--mainLightThemeDarkBlue);
    color: white;
}

.project-item button {
    background: none;
    border: none;
    padding: 0;
}

.project-drag, .project-settings {
    display: inline-block;
    height: 27px;
    width: 27px;
    background-size: cover;
}

.project-drag {
    margin-left: 5px;
    background-image: url('./images/icons8-menu-50.png');
}

.project-settings {
    background-image: url('./images/icons8-dots-96.png');
}

.project-item:hover .project-drag {
    background-image: url('./images/icons8-menu-50\ \(1\).png');
}

.project-item:hover .project-settings  {
    background-image: url('./images/icons8-dots-48\ \(1\).png');
}

#btnAddProject {
    display: block;
    font-weight: 600;
    background: none;
    border: none;
    width: 145px;
    margin-bottom: 15px;
    padding: 2px;
    padding-bottom: 10px;
    font-family: 'Poppins';
    border-radius: 7px;
    margin: 12px auto;
    box-shadow: 0px 0px 11px 4px rgb(0 0 0 / 8%);
    cursor: pointer;
}

#btnAddProject::before {
    display: inline-block;
    position: relative;
    content: '';
    background-image: url('/src/images/icons8-add-96.png');
    background-size: cover;
    height: 25px;
    width: 25px;
    top: 7px;
    left: 0;
}

#btnAddProject:hover {
    background-color: var(--mainLightThemeDarkBlue);
    color: white;
}

#btnAddProject:hover::before {
    background-image: url('./images/icons8-add-96\ \(1\).png');
}

#project-form {    
    padding: 20px;
    border: 2px solid black;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    background-color: white;
}

#project-name-box > * {
    display: block;
}

#project-name-box {
    align-self: flex-start;
}

#project-name-box label {
    font-size: 22px;
    color: black;
}

#project-name-box input {
    outline: none;
    border: 1px solid #a1a1a1;
    border-radius: 5px;
    padding: 2px 5px;
    font-size: 18px;
    width: 100%;
}

#project-name-box input:focus {
    border: 1px solid #000;
}

#confirm-project {
    margin-top: 8px;
    align-self: flex-end;
    padding: 5px 20px;
    border: none;
    border-radius: 5px;
    background-color: #00b7ff;
    color: white;
    font-weight: bold;
}

#blur-background {
    height: 100vh;
    width: 100vw;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #00000069;
}

